--- a/personal-dashboard/src/index.html
+++ b/personal-dashboard/src/index.html
@@ -6,12 +6,12 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <!-- Google Maps API -->
-    <script
+    <!-- Google Maps API - Add your API key here when ready -->
+    <!-- <script
       async
       defer
       src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_HERE&libraries=places,geometry,routes&loading=async"
-    ></script>
+    ></script> -->
   </head>
   <body>
     <app-root></app-root>
